# linux_driver_study

./: .gitignore  CMakeLists.txt  README.md  compile.txt  note.md
01_hello_drv/: Makefile  hello.c  hello_drv.c  hello_drv_test.c  note.md
02_gpio/: note.md  stm32mp157_gpio.md
03_led_drv/: Makefile  led_drv.c  led_drv_stm32mp157.c  led_drv_test  led_drv_test.c  led_opr.h  note.md
04_led_drv_oop/: board_A_led.c  chip_gpio_opr.h  led_drv.c  led_drv_test.c  note.md
04_led_drv_separate/: Makefile  chip_gpio_opr.c  led_resource.h  note.md
05_led_drv_bus/: CMakeLists.txt  note.md
05_led_drv_bus/inc/: chip_gpio.h  led_drv.h
05_led_drv_bus/src/: Makefile  led_board_A_pdevice.c  led_chip_pdriver.c  led_drv.c
06_device_tree/: note.md
06_led_drv_device_tree/: CMakeLists.txt  note.md  xunxun_led.dtsi
06_led_drv_device_tree/src/: Makefile  led_chip_pdriver.c  led_drv.c  led_test.c
07_button_drv/: CMakeLists.txt
07_button_drv/inc/: button_drv.h
07_button_drv/src/: Makefile  button_drv.c  button_drv_stm32mp157.c  test.c
08_pinctrl_gpio_drv/: note_gpio.md  note_pinctrl.md  xunxun_led_gpiosys.dtsi
08_pinctrl_gpio_drv/inc/: led_operation.h
08_pinctrl_gpio_drv/src/: Makefile  led_drv.c  test
21_spi/: CMakeLists.txt  note.md
21_spi/BSP/: W25Qx.c  W25Qx.h  adapter_spi.h  adapter_type.h
21_spi/inc/: app_base_type.h
21_spi/src/: Makefile  adapter_spi_linux.c  test_w25qxx_spidev.c
21_spi_spidev/: note.md  spi_test.dts
21_spi_spidev/BSP/: W25Qx.c
21_spi_spidev/src/: Makefile  adapter_spi_linux.c  test_w25qxx_spidev  test_w25qxx_spidev.c
